# hm-mde-mod

db/: uuid
db/revprops/0/: 0
trunk/costume_profiles/: profiles.pro
trunk/extplugins/: CMakeLists.txt
trunk/extplugins/CMakeModules/: FindCore.cmake  FindODE.cmake  FindPlugins.cmake  FindQt.cmake  FindSQLite3.cmake  FindTinyXML.cmake  FindVLD.cmake  Findc3dlib.cmake  Findlog4cxx.cmake  MotionTargetUtils.cmake
trunk/extplugins/CMakeModules/Templates/: VisualStudioUserFile.vcxproj.user.in
trunk/extplugins/c3dMarkers/include/: C3DMarkersChannels.h
trunk/extplugins/c3dMarkers/src/: C3DMarkersPCH.h  C3DMarkersParser.cpp  C3DMarkersParser.h  C3DMarkersPlugin.cpp  CMakeLists.txt
trunk/extplugins/exampleDomainDataPlugin/src/: CMakeLists.txt  Plugin.cpp  exampleScalarChannelProcessor.cpp  exampleScalarChannelProcessor.h  exampleScalarConfigurationWidget.cpp
trunk/extplugins/exampleWorkflowPlugin/include/: exampleIntStatistics.h
trunk/extplugins/exampleWorkflowPlugin/src/: CMakeLists.txt  PCH.h  Plugin.h  exampleIntParser.cpp  exampleIntParser.h  exampleIntProcessorFilter.cpp  exampleIntProcessorFilter.h  exampleIntProcessorFlopSignMul.cpp  exampleIntProcessorFlopSignMul.h  exampleIntProcessorStatistic.cpp  exampleIntProcessorStatistic.h  exampleIntVisualizer.cpp  exampleIntVisualizer.h  exampleIntVisualizerStatistics.cpp  exampleIntVisualizerStatistics.h  exampleIntWidgetProcessorFilterConfiguration.cpp  exampleIntWidgetProcessorFilterConfiguration.h
trunk/extplugins/plugin1/src/: CMakeLists.txt  Plugin.cpp
trunk/extplugins/plugin2/src/: CMakeLists.txt  Plugin.cpp  PluginPrivate.h
trunk/sample/: EDR Test.sln
trunk/sample/EDR Test/: EDR Test.vcxproj  Plugin.cpp
trunk/src/extplugins/: CMakeLists.txt
trunk/src/extplugins/CustomCMakeModules/Finders/: FindCALIBRATION_ALGORITHMS.cmake  FindNAVLIB.cmake  FindPREREQUISITES.cmake
trunk/src/extplugins/CustomCMakeModules/legacy/: FindCore.cmake  FindFFmpeg.cmake  FindOSG.cmake  FindPlugins.cmake  FindPrerequisites.cmake  FindQWT.cmake  FindQtHtmlGenLib.cmake  FindSDL.cmake  FindVidLib.cmake  FindWebServicesLib.cmake  FindWsdlpull.cmake  FindcURL.cmake  MotionTargetUtils.cmake
trunk/src/extplugins/CustomCMakeModules/legacy/Templates/: VisualStudioUserFile.vcxproj.user.in
trunk/src/extplugins/include/c3dMarkers/: C3DMarkersChannels.h
trunk/src/extplugins/include/exampleWorkflowPlugin/: exampleIntStatistics.h
trunk/src/extplugins/include/plugin2/: PluginPublic.h
trunk/src/extplugins/src/: CMakeLists.txt
trunk/src/extplugins/src/c3dMarkers/: CMakeLists.txt
trunk/src/extplugins/src/c3dMarkers/src/: C3DMarkersPCH.cpp  C3DMarkersParser.cpp  C3DMarkersParser.h  C3DMarkersPlugin.cpp  C3DMarkersPlugin.h
trunk/src/extplugins/src/exampleDomainDataPlugin/: CMakeLists.txt
trunk/src/extplugins/src/exampleDomainDataPlugin/src/: Plugin.cpp  exampleScalarChannelProcessor.cpp  exampleScalarChannelProcessor.h  exampleScalarConfigurationWidget.h
trunk/src/extplugins/src/exampleDomainDataPlugin/ui/: exampleScalarConfigurationWidget.ui
trunk/src/extplugins/src/exampleWorkflowPlugin/: CMakeLists.txt
trunk/src/extplugins/src/exampleWorkflowPlugin/src/: IntsModel.cpp  IntsModel.h  PCH.h  Plugin.cpp  Plugin.h  exampleIntParser.cpp  exampleIntParser.h  exampleIntProcessorFilter.cpp  exampleIntProcessorFilter.h  exampleIntProcessorFlopSignMul.cpp  exampleIntProcessorFlopSignMul.h  exampleIntProcessorStatistic.cpp  exampleIntProcessorStatistic.h  exampleIntRemoteSource.cpp  exampleIntRemoteSource.h  exampleIntVisualizer.cpp  exampleIntVisualizer.h  exampleIntVisualizerStatistics.cpp  exampleIntVisualizerStatistics.h  exampleIntWidgetProcessorFilterConfiguration.cpp  examplePins.cpp  examplePins.h
trunk/src/extplugins/src/exampleWorkflowPlugin/ui/: exampleIntWidgetProcessorFilterConfiguration.ui
trunk/src/extplugins/src/imuCostumeAlgorithms/: CMakeLists.txt
trunk/src/extplugins/src/imuCostumeAlgorithms/src/: CQuatIO.cpp  CQuatIO.h  Plugin.cpp  Plugin.h  calibWidget.cpp  calibWidget.h
trunk/src/extplugins/src/imuCostumeAlgorithms/src/filter_lib/: IOrientationFilter.h  lib_main.cpp  lib_main.h
trunk/src/extplugins/src/imuCostumeAlgorithms/src/filter_lib/internal/: CAQKfFilter.cpp  CAQKfFilter.h  CInstFilter.cpp  CInstFilter.h  JS_BaseElements.cpp  JS_BaseElements.h  JS_DCMatrix.cpp  JS_DCMatrix.h  JS_FiMatrix.cpp  JS_FiMatrix.h  JS_Quaternion.cpp  JS_Quaternion.h  JS_StateVector.cpp  JS_StateVector.h  Utils.cpp  Utils.h
trunk/src/extplugins/src/imuCostumeAlgorithms/ui/: calib.ui
trunk/src/extplugins/src/motionAnalysisToolsPlugin/: CMakeLists.txt
trunk/src/extplugins/src/motionAnalysisToolsPlugin/src/: DegreesToRadians.cpp  DegreesToRadians.h  EulerNoiseAdderProcessor.cpp  EulerNoiseAdderProcessor.h  Plugin.cpp  QuatCommon.cpp  QuatCommon.h  QuatCompression.cpp  QuatCompression.h  QuatLiftingSchemeTProcessor.h  QuaternionCompressorProcessor.cpp  QuaternionCompressorProcessor.h  QuaternionDenoiseProcessor.cpp  QuaternionDenoiseProcessor.h  QuaternionEulerConverter.cpp  QuaternionEulerConverter.h  QuaternionExpProcessor.cpp  QuaternionExpProcessor.h  QuaternionLogProcessor.cpp  QuaternionLogProcessor.h  QuaternionToAngleAxis.cpp  QuaternionToAngleAxis.h  SkeletonCompressorProcessor.cpp  SkeletonCompressorProcessor.h  Types.h
trunk/src/extplugins/src/plugin1/: CMakeLists.txt
trunk/src/extplugins/src/plugin1/src/: Plugin.cpp
trunk/src/extplugins/src/plugin2/: CMakeLists.txt
trunk/src/extplugins/src/plugin2/src/: Plugin.cpp
trunk/src/tool_libraries/: CMakeLists.txt
trunk/src/tool_libraries/CustomCMakeModules/Finders/: FindGeneralAlgorithms.cmake  FindIMU.cmake  FindIMUEstimatorsTest.cmake  FindOrientationFitting.cmake  FindQuatUtils.cmake
trunk/src/tool_libraries/examples/: CMakeLists.txt
trunk/src/tool_libraries/examples/IMUDataVisualizer/: CMakeLists.txt
trunk/src/tool_libraries/include/QuatUtils/: DualQuat.h  DualQuatUtils.h  QuatUtils.h  QuaternionCompressor.h  QuaternionInterpolators.h  Vec8d.h
trunk/src/tool_libraries/src/: CMakeLists.txt
trunk/src/tool_libraries/src/IMU/: CMakeLists.txt
(+81 files in other folders)
